syntax = "proto3";
package records;

service Recorder {rpc SendMessage(RecordRequest) returns (RecordRespond); }

message RecordRequest {
    string user_name = 1;
    uint32 user_age = 2;
}

message RecordRespond {
    bool successful = 1;
    string message = 2;
}